# BOSS

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Readme.org
.github/workflows/: artifact_cleanup.yml  ccpp.yml
Benchmarks/: BOSSBenchmarks.cpp
Benchmarks/TPCH/: Q10.plan  Q10.rkt  Q10.sql  Q18.rkt  Q3.rkt  Q6.rkt  Q8.plan  Q8.rkt  Q8.sql  Q9.rkt  Q9.sql  create.rkt
Server/: Server.rkt
Source/: BOSS.cpp  BOSS.h  BOSS.hpp  BOSS.i  BootstrapEngine.hpp  Engine.hpp  Expression.cpp  Expression.hpp  ExpressionUtilities.hpp  PortableBOSSSerialization.h  Serialization.hpp  SwigHelpers.hpp  Utilities.hpp
Source/Engines/: Wolfram.cpp  Wolfram.hpp
Source/Shims/: BOSS.rkt  RacketMacros.cpp
Tests/: BOSSTests.cpp  CAPITests.cpp  TestPython.py
